Revert "Fixing LESS global layout overflow on mobile (1)"
This reverts commit aa05b4da870305e808101de4514234375a24d899.

--- a/src/styles/components/gallery.less
+++ b/src/styles/components/gallery.less
@@ -86,7 +86,8 @@
 
 .gallery__locations-list {
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: none;
+    height: calc(100vh - 188px);
 
     .gallery__location-item {
         border-bottom: 2px solid @border-color;
