--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -1,10 +1,5 @@
 @import './globals.less';
 
-.places {
-    height: 100vh;
-    height: -webkit-fill-available;
-}
-
 .places__menu {
     height: 52px;
     background-color: @background-color-primary;
@@ -62,8 +57,7 @@
         width: @sidebar-width-mobile;
 
         &.places__gallery--open {
-            display: flex;
-            flex-direction: column;
+            position: absolute;
             transform: translateX(0);
             width: @sidebar-width-mobile;
 
